# image_classification

./: evaluate.py  mnist_model.py  pyproject.toml  train.py
